# road_signs_predict

./: README.md  comparison.py  data_ru.yaml  detect_signs.py  hyperparams_tune.py  main.py  pyproject.toml  screen_detect.py  signs_desc.xlsx  signs_names.xlsx  train_yolo26n.py  train_yolo26s.py  train_yolov8s.py
runs/detect/road_signs_yolo26l_1280_b12-18/: args.yaml  results.csv
runs/detect/road_signs_yolo26l_1280_b12-28/: args.yaml  results.csv
runs/detect/yolo26s_rtsd_dataset/: args.yaml  results.csv
runs/detect/yolov8s_rtsd_dataset/: args.yaml  results.csv
